samples/_failures_safe/1761042571_bc6297_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddd8f48c.c: In function ‘main’:
./samples/SAFE/__tmp_ddd8f48c.c:144:5: error: expected expression at end of input
  144 |     addEdge(graph, 1,
      |     ^~~~~~~
./samples/SAFE/__tmp_ddd8f48c.c:144:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_ddd8f48c.c:45:5: note: declared here
   45 | int addEdge(struct Graph* graph, int src, int dest, int weight) {
      |     ^~~~~~~
./samples/SAFE/__tmp_ddd8f48c.c:144:5: error: expected declaration or statement at end of input
  144 |     addEdge(graph, 1,
      |     ^~~~~~~
